# niceguiEditor

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
niceguiEditor/: editor.py
tests/: testApp.py  testApp.py.bak
